apps/home/home-assistant-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: home-assistant
  namespace: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home-assistant.atlas.laucoin.fr`)
      services:
        - name: home-assistant
          port: 8080
  tls:
    secretName: home-assistant-tls
